--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/yunlogo_32x32.svg" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/yunlogo_32x32.svg"
+      type="image/svg+xml"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Yuna Chen 的個人作品網站，展示網頁開發與設計作品。"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="YunaChen's Portfolio" />
+    <meta
+      property="og:description"
+      content="Yuna Chen 的個人作品網站，展示網頁開發與設計作品。"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:url" content="https://yunsweb.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="YunaChen's Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Yuna Chen 的個人作品網站，展示網頁開發與設計作品。"
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
+
     <title>YunaChen's Portfolio</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
